Endgame: Singularity Changelog

v0.25 (released 2006.??.??):

USER-VISIBLE CHANGES:
* There is now a py2exe version available for Windows, which does not
  require installation of any other software. (emh)
- Default language changeable via option screen. (emh)

OTHER CHANGES:
- Deleted some extraneous images and optimized some others. (Phil)
- Cleaned up formatting in g.py. (emh)

v0.24 (released 2006.07.13):

USER-VISIBLE CHANGES:
- The Page Up, Page Down, Home, and End keys work in all listboxes. (emh)
- Modified money displays to keep them from overflowing. (Phil)
* Suspicion loss is now quadratic; different groups "forget" quicker.
  (Phil, Ticho for the suggestion)
* There are now restrictions on the building of items. (emh)
- Fixed a couple scrollbars that weren't working right. (emh)
- Spruced up text. (Phil)
- Fixed a bug with the item cost display. (Phil)
- Fixed a bug when running in NetBSD. (emh, reported by Reno Reckling)
* More items/techs. (emh)
* Bases can now be lost due to disrepair. (emh)
* Added ability to examine items and techs. (emh)
- Added in-game "help" in the form of information on various concepts.
  (emh, tweaks by Phil)
* Added preference system. (emh)
- Updated es_AR translation. (Borg[MDQ])

v0.23a (released 2006.03.08):

USER-VISIBLE CHANGES:
* Save/load works on Windows again. (emh, rspoerri for bug report)
- Updated option help (emh)

v0.23 (released 2006.03.06):

USER-VISIBLE CHANGES:
- Fixed bug that allowed access to uncompleted bases. (emh, Borg[MDQ] for
  report)
* Added ability to destroy bases. (emh, multiple people for suggestion)
* Reduced (real-world) processor usage. (emh, anonymous for suggestion)
- Moved savefile location to ~/.endgame/saves (emh, Nescius for patch)
* Added finance screen. (emh, many for suggestion)
- Construction time bonus actually works now. (emh)
- More numbers use commas now. (emh)
- Increased cost of clusters. (emh)
- Adjusted button positions for greater usability. (Phil)